🛑🏗 WARN:  Unfinished Building

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "karosa",
-    "slug": "karosa",
+    "name": "Karosa",
+    "slug": "Karosa",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
