--- a/package.json
+++ b/package.json
@@ -5,32 +5,43 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "lint": "eslint --ext .ts,.tsx . --max-warnings 0",
+    "tsc": "tsc",
+    "ci": "yarn lint && yarn tsc"
   },
   "dependencies": {
-    "@expo-google-fonts/caveat-brush": "^0.1.0",
-    "@expo-google-fonts/inter": "^0.1.0",
+    "@expo/vector-icons": "^10.0.0",
+    "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/native": "^5.7.3",
-    "@react-navigation/stack": "^5.9.0",
-    "expo": "~38.0.8",
-    "expo-font": "~8.2.1",
-    "expo-status-bar": "^1.0.2",
-    "formik": "^2.1.5",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-gesture-handler": "~1.6.0",
-    "react-native-modal": "^11.5.6",
-    "react-native-reanimated": "~1.9.0",
-    "react-native-safe-area-context": "~3.0.7",
-    "react-native-screens": "~2.9.0",
-    "react-native-web": "~0.11.7",
+    "@react-navigation/native": "^5.7.4",
+    "@react-navigation/stack": "^5.9.1",
+    "@shopify/restyle": "^1.3.0",
+    "axios-observable": "^1.1.3",
+    "expo": "~39.0.2",
+    "expo-asset": "~8.2.0",
+    "expo-constants": "~9.2.0",
+    "expo-font": "~8.3.0",
+    "expo-status-bar": "~1.0.2",
+    "formik": "^2.1.7",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-screens": "~2.10.1",
+    "react-native-web": "~0.13.12",
     "yup": "^0.29.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0"
+    "@types/react": "~16.9.35",
+    "@types/react-dom": "~16.9.8",
+    "@types/react-native": "~0.63.2",
+    "eslint": "^7.10.0",
+    "eslint-config-react-native-wcandillon": "^3.3.3",
+    "react-native-web": "~0.13.7",
+    "typescript": "~3.9.5"
   },
   "private": true
 }
