--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo-google-fonts/caveat-brush": "^0.1.0",
     "@expo-google-fonts/inter": "^0.1.0",
     "@expo/vector-icons": "^10.0.0",
+    "@ionic/react": "^5.4.1",
     "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.9.2",
