--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^10.0.0",
     "@ionic/react": "^5.4.1",
     "@react-native-community/async-storage": "~1.12.0",
+    "@react-native-community/checkbox": "^0.5.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/native": "^5.7.4",
@@ -41,6 +42,7 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-unimodules": "^0.7.0-rc.4",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.1",
