--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@expo/vector-icons": "^10.0.0",
     "@ionic/react": "^5.4.1",
     "@react-native-community/async-storage": "~1.12.0",
-    "@react-native-community/checkbox": "^0.5.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/native": "^5.7.4",
@@ -40,6 +39,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-elements": "^3.0.0-alpha.1",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
