--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ionic/react": "^5.4.1",
     "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-picker/picker": "^1.9.2",
     "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/native": "^5.7.4",
     "@react-navigation/stack": "^5.9.1",
@@ -34,6 +35,7 @@
     "expo-status-bar": "~1.0.2",
     "formik": "^2.1.7",
     "immer": "^7.0.9",
+    "picker": "^0.1.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
