--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@ionic/react": "^5.4.1",
     "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "^5.9.7",
     "@react-native-picker/picker": "^1.9.2",
     "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/native": "^5.7.4",
     "@react-navigation/stack": "^5.9.1",
     "@redux-saga/core": "^1.1.3",
+    "@types/ramda": "^0.27.32",
     "@types/react-redux": "^7.1.9",
     "@types/redux-logger": "^3.0.8",
     "@types/yup": "^0.29.8",
@@ -36,6 +38,7 @@
     "formik": "^2.1.7",
     "immer": "^7.0.9",
     "picker": "^0.1.4",
+    "ramda": "^0.27.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
