--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-community/netinfo": "^5.9.7",
     "@react-native-picker/picker": "^1.9.2",
     "@react-navigation/bottom-tabs": "^5.9.2",
+    "@react-navigation/material-top-tabs": "^5.3.10",
     "@react-navigation/native": "^5.7.4",
     "@react-navigation/stack": "^5.9.1",
     "@redux-saga/core": "^1.1.3",
@@ -49,6 +50,7 @@
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-simple-radio-button": "^2.7.4",
+    "react-native-tab-view": "^2.15.2",
     "react-native-unimodules": "^0.7.0-rc.4",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.1",
