--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-constants": "~9.2.0",
     "expo-file-system": "~9.2.0",
     "expo-font": "~8.3.0",
+    "expo-image-picker": "^9.1.1",
     "expo-status-bar": "~1.0.2",
     "formik": "^2.1.7",
     "immer": "^7.0.9",
@@ -57,6 +58,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
     "ts-loader": "^6.1.0",
