feat: initial commit

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,29 +1,14 @@
 {
   "extends": "react-native-wcandillon",
   "rules": {
-    "linebreak-style": ["error", "windows"],
+    "linebreak-style": ["error", "unix"],
     "@typescript-eslint/no-explicit-any": "off",
     "import/no-named-as-default": 0,
     "import/prefer-default-export": "off",
+    "import/extensions": 0,
+    "import/no-anonymous-default-export": 0,
     "@typescript-eslint/no-empty-interface": 0,
-    "curly": "off",
-    "import/no-anonymous-default-export": [
-      "error",
-      {
-        "allowArray": false,
-        "allowArrowFunction": false,
-        "allowAnonymousClass": false,
-        "allowAnonymousFunction": true,
-        "allowCallExpression": true, // The true value here is for backward compatibility
-        "allowLiteral": false,
-        "allowObject": false
-      }
-    ],
-    "prettier/prettier": [
-      "error",
-      {
-        "endOfLine": "auto"
-      }
-    ]
+    "@typescript-eslint/no-var-requires": 0,
+    "curly": "off"
   }
 }
