--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "main": "node_modules/expo/AppEntry.js",
+  "private": true,
   "scripts": {
-    "start": "expo start",
+    "dev": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
     "lint": "eslint --ext .ts,.tsx . --max-warnings 0",
     "tsc": "tsc",
-    "ci": "yarn lint && yarn tsc"
+    "ci": "yarn lint && yarn tsc",
+    "generateComponent": "plop --plopfile generators/component.js",
+    "generateScreen": "plop --plopfile generators/screen.js"
   },
   "dependencies": {
     "@expo-google-fonts/caveat-brush": "^0.1.0",
@@ -36,8 +39,10 @@
     "expo-file-system": "~9.2.0",
     "expo-font": "~8.3.0",
     "expo-image-picker": "^9.1.1",
+    "expo-localization": "^9.1.0",
     "expo-status-bar": "~1.0.2",
     "formik": "^2.1.7",
+    "i18n-js": "^3.8.0",
     "immer": "^7.0.9",
     "picker": "^0.1.4",
     "ramda": "^0.27.1",
@@ -67,18 +72,19 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@types/i18n-js": "^3.8.0",
     "@types/node": "^14.11.2",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "babel-plugin-inline-dotenv": "^1.6.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-preset-expo": "~8.1.0",
     "eslint": "^7.10.0",
     "eslint-config-react-native-wcandillon": "^3.3.3",
     "metro": "^0.58.0",
-    "react-native-web": "~0.13.7",
+    "plop": "^2.7.4",
     "tsconfig-paths": "^3.9.0",
     "typescript": "~3.9.5"
-  },
-  "private": true
+  }
 }
