--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "expo start",
     "android": "expo start --android",
-    "ios": "expo start --ios",
+    "ios": "expo start -c --ios",
     "web": "expo start --web",
     "eject": "expo eject",
     "lint": "eslint --ext .ts,.tsx . --max-warnings 0",
@@ -20,7 +20,7 @@
     "@ionic/react": "^5.4.1",
     "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/netinfo": "^5.9.7",
+    "@react-native-community/netinfo": "5.9.6",
     "@react-native-picker/picker": "^1.9.2",
     "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/material-top-tabs": "^5.3.10",
@@ -32,14 +32,14 @@
     "@types/redux-logger": "^3.0.8",
     "@types/yup": "^0.29.8",
     "@unimodules/core": "^5.5.1",
-    "axios": "^0.20.0",
+    "axios": "0.21.1",
     "expo": "~39.0.2",
     "expo-asset": "~8.2.0",
     "expo-constants": "~9.2.0",
     "expo-file-system": "~9.2.0",
     "expo-font": "~8.3.0",
     "expo-image-picker": "^9.1.1",
-    "expo-localization": "^9.1.0",
+    "expo-localization": "~9.0.0",
     "expo-permissions": "~9.3.0",
     "expo-status-bar": "~1.0.2",
     "formik": "^2.1.7",
@@ -50,7 +50,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
-    "react-native-elements": "^3.0.0-alpha.1",
+    "react-native-elements": "3.0.0-alpha.1",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~1.13.0",
@@ -98,6 +98,7 @@
     "eslint-plugin-testing-library": "^3.10.1",
     "metro": "^0.58.0",
     "plop": "^2.7.4",
+    "prettier": "^2.2.1",
     "react-native-svg-transformer": "^0.14.3",
     "tsconfig-paths": "^3.9.0",
     "typescript": "~3.9.5"
