--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
       "@app/components/*": ["src/components/*"],
       "@app/config/*": ["src/config/*"],
       "@app/hooks": ["src/hooks"],
-      "@app/layouts/*": ["src/components/layouts/*"],
+      "@app/templates/*": ["src/components/templates/*"],
       "@app/molecules/*": ["src/components/molecules/*"],
       "@app/navigators/*": ["src/navigators/*"],
       "@app/organisms/*": ["src/components/organisms/*"],
