--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "expo start",
-    "android": "expo start --android",
+    "android": "expo start -c --android",
     "ios": "expo start -c --ios",
     "web": "expo start --web",
     "eject": "expo eject",
@@ -74,25 +74,32 @@
     "yup": "^0.29.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
+    "@babel/core": "^7.11.6",
+    "@babel/runtime": "^7.11.2",
+    "@react-native-community/eslint-config": "~2.0.0",
     "@types/i18n-js": "^3.8.0",
+    "@types/jest": "^26.0.14",
     "@types/node": "^14.11.2",
-    "@types/react": "~16.9.35",
-    "@types/react-dom": "~16.9.8",
-    "@types/react-native": "~0.63.2",
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-native": "^0.63.22",
+    "@types/react-native-vector-icons": "^6.4.6",
+    "@types/react-redux": "^7.1.9",
+    "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "@typescript-eslint/parser": "^4.2.0",
     "babel-plugin-inline-dotenv": "^1.6.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "babel-preset-expo": "~8.1.0",
-    "eslint": "^7.10.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-import-resolver-babel-module": "^5.2.0",
+    "eslint": "^7.9.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-import-resolver-babel-module": "^5.1.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.1.2",
     "eslint-plugin-react-native": "^3.10.0",
     "eslint-plugin-react-native-a11y": "^2.0.3",
     "eslint-plugin-testing-library": "^3.10.1",
@@ -101,6 +108,6 @@
     "prettier": "^2.2.1",
     "react-native-svg-transformer": "^0.14.3",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "~3.9.5"
+    "typescript": "~4.1.3"
   }
 }
