finished KAR-40: Top products ; created carousel banner KAR-33 Home: Banner

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-simple-radio-button": "^2.7.4",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-tab-view": "^2.15.2",
     "react-native-unimodules": "^0.7.0-rc.4",
     "react-native-web": "~0.13.12",
@@ -71,6 +72,7 @@
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "@types/react-native-snap-carousel": "^3.8.2",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-preset-expo": "~8.1.0",
     "eslint": "^7.10.0",
