--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/netinfo": "5.9.6",
-    "@react-native-picker/picker": "^1.9.2",
+    "@react-native-community/picker": "1.6.6",
     "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/material-top-tabs": "^5.3.10",
     "@react-navigation/native": "^5.7.4",
@@ -52,6 +52,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-elements": "3.0.0-alpha.1",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-picker-select": "^8.0.4",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
