finished refactoring banner carousel at home screen

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-native-screens": "~2.10.1",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-skeleton-placeholder": "^3.0.2",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "12.1.0",
     "react-native-tab-view": "^2.15.2",
     "react-native-unimodules": "^0.7.0-rc.4",
@@ -84,6 +85,7 @@
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/react-native": "^0.63.22",
+    "@types/react-native-snap-carousel": "^3.8.2",
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-redux": "^7.1.9",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
