--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
-    "react-native-elements": "3.0.0-alpha.1",
+    "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-raw-bottom-sheet": "^2.2.0",
