--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   "dependencies": {
     "@expo-google-fonts/caveat-brush": "^0.1.0",
     "@expo-google-fonts/inter": "^0.1.0",
-    "@expo/vector-icons": "^10.0.0",
+    "@expo/metro-config": "^0.1.65",
+    "@expo/vector-icons": "^12.0.0",
     "@ionic/react": "^5.4.1",
-    "@react-native-community/async-storage": "~1.12.0",
+    "@react-native-async-storage/async-storage": "^1.13.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/netinfo": "5.9.6",
+    "@react-native-community/netinfo": "6.0.0",
     "@react-native-community/picker": "1.6.6",
     "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/material-top-tabs": "^5.3.10",
@@ -31,17 +32,18 @@
     "@types/react-redux": "^7.1.9",
     "@types/redux-logger": "^3.0.8",
     "@types/yup": "^0.29.8",
-    "@unimodules/core": "^5.5.1",
+    "@unimodules/core": "~7.1.0",
     "axios": "0.21.1",
-    "expo": "~39.0.2",
-    "expo-asset": "~8.2.0",
-    "expo-constants": "~9.2.0",
-    "expo-file-system": "~9.2.0",
-    "expo-font": "~8.3.0",
-    "expo-image-picker": "^9.1.1",
-    "expo-localization": "~9.0.0",
-    "expo-permissions": "~9.3.0",
-    "expo-status-bar": "~1.0.2",
+    "expo": "^41.0.0",
+    "expo-asset": "~8.3.1",
+    "expo-constants": "~10.1.3",
+    "expo-file-system": "~11.0.2",
+    "expo-font": "~9.1.0",
+    "expo-image-picker": "~10.1.4",
+    "expo-localization": "~10.1.0",
+    "expo-permissions": "~12.0.1",
+    "expo-splash-screen": "~0.10.2",
+    "expo-status-bar": "~1.0.4",
     "formik": "^2.1.7",
     "i18n-js": "^3.8.0",
     "immer": "^7.0.9",
@@ -49,19 +51,19 @@
     "ramda": "^0.27.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native": "0.63.4",
     "react-native-elements": "^3.4.1",
-    "react-native-gesture-handler": "~1.7.0",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-picker-select": "^8.0.4",
     "react-native-raw-bottom-sheet": "^2.2.0",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "~2.10.1",
+    "react-native-reanimated": "~2.1.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.0.0",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-skeleton-placeholder": "^3.0.2",
     "react-native-svg": "12.1.0",
     "react-native-tab-view": "^2.15.2",
-    "react-native-unimodules": "^0.7.0-rc.4",
+    "react-native-unimodules": "~0.13.3",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
@@ -75,15 +77,15 @@
     "yup": "^0.29.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
+    "@babel/core": "~7.9.0",
     "@babel/runtime": "^7.11.2",
     "@react-native-community/eslint-config": "~2.0.0",
     "@types/i18n-js": "^3.8.0",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.2",
-    "@types/react": "^16.9.49",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-native": "^0.63.22",
+    "@types/react": "~16.9.35",
+    "@types/react-dom": "~16.9.8",
+    "@types/react-native": "~0.63.2",
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-redux": "^7.1.9",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
@@ -91,7 +93,7 @@
     "babel-plugin-inline-dotenv": "^1.6.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.3",
-    "babel-preset-expo": "~8.1.0",
+    "babel-preset-expo": "8.3.0",
     "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-import-resolver-babel-module": "^5.1.2",
@@ -109,6 +111,6 @@
     "prettier": "^2.2.1",
     "react-native-svg-transformer": "^0.14.3",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "~4.1.3"
+    "typescript": "~4.0.0"
   }
 }
