--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "expo-file-system": "~11.0.2",
     "expo-font": "~9.1.0",
     "expo-image-picker": "~10.1.4",
-    "expo-localization": "~10.1.0",
     "expo-permissions": "~12.0.1",
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
@@ -54,6 +53,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-easy-toast": "^2.0.0",
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-picker-select": "^8.0.4",
