--- a/app.json
+++ b/app.json
@@ -17,6 +17,9 @@
     "ios": {
       "supportsTablet": true
     },
+    "android": {
+      "package": "host.exp.exponent"
+    },
     "web": {
       "favicon": "./assets/favicon.png"
     },
