--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@react-navigation/stack": "^5.9.1",
     "@redux-saga/core": "^1.1.3",
     "@types/ramda": "^0.27.32",
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-snap-carousel": "^3.8.3",
     "@types/react-redux": "^7.1.9",
     "@types/redux-logger": "^3.0.8",
@@ -48,7 +49,9 @@
     "expo-constants": "~10.1.3",
     "expo-file-system": "~11.0.2",
     "expo-font": "~9.1.0",
+    "expo-google-app-auth": "^8.1.7",
     "expo-image-picker": "~10.1.4",
+    "expo-random": "~11.1.2",
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
     "formik": "^2.1.7",
@@ -59,6 +62,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-dotenv": "^2.5.5",
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-picker-select": "^8.0.4",
