--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "expo": "^41.0.0",
     "expo-asset": "~8.3.1",
     "expo-constants": "~10.1.3",
+    "expo-facebook": "~11.0.5",
     "expo-file-system": "~11.0.2",
     "expo-font": "~9.1.0",
     "expo-google-app-auth": "^8.1.7",
