refactor(env): added environment values for env.example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
-# OAuth Config
-KAROSA_IOS=value
-KAROSA_ANDROID=value
+# OAuth Google Config
+KAROSA_IOS=868796147252-jqt2tcap3phqk787kns7p857aegpkm8a.apps.googleusercontent.com
+KAROSA_ANDROID=868796147252-g7bmn89dov4up9lld8m6o3k1r58vmfiq.apps.googleusercontent.com
+
+#OAuth Facebook Config
+KAROSA_APP_ID=1091360418020555
