refactor(env): added API url in env.example and used it on instance.ts

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ KAROSA_ANDROID=868796147252-g7bmn89dov4up9lld8m6o3k1r58vmfiq.apps.googleusercont
 
 #OAuth Facebook Config
 KAROSA_APP_ID=1091360418020555
+
+# API
+API_URL=http://tambisqa-env.eba-hwct9u5s.ap-southeast-1.elasticbeanstalk.com
