swipe to delete in progress

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/ramda": "^0.27.32",
     "@types/react-native-snap-carousel": "^3.8.3",
     "@types/react-redux": "^7.1.9",
+    "@types/react-router": "^5.1.16",
     "@types/redux-logger": "^3.0.8",
     "@types/yup": "^0.29.8",
     "@unimodules/core": "^5.5.1",
@@ -58,6 +59,7 @@
     "react-native": "0.63.4",
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-interactable": "^2.0.1",
     "react-native-picker-select": "^8.0.4",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~2.1.0",
@@ -66,6 +68,8 @@
     "react-native-skeleton-placeholder": "^3.0.2",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "12.1.0",
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-swipeable-row": "^0.8.1",
     "react-native-tab-view": "^3.0.1",
     "react-native-unimodules": "~0.13.3",
     "react-native-web": "~0.13.12",
@@ -87,11 +91,12 @@
     "@types/i18n-js": "^3.8.0",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.2",
-    "@types/react": "~16.9.35",
-    "@types/react-dom": "~16.9.8",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.9",
     "@types/react-native": "~0.63.2",
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
     "babel-plugin-inline-dotenv": "^1.6.0",
