--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/netinfo": "6.0.0",
     "@react-native-community/picker": "1.6.6",
+    "@react-native-picker/picker": "^1.16.3",
     "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/material-top-tabs": "^5.3.10",
     "@react-navigation/native": "^5.7.4",
@@ -57,6 +58,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-dropdown-picker": "^5.1.21",
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-interactable": "^2.0.1",
