feat(github actions): added initial github actons main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,11 @@ on:
   push:
     branches:
       - development
+      - *KAR-
+  pull_request:
+    branches:
+      - development
+  
 jobs:
   publish:
     name: Install and publish
