fix(github actions): modified branch pattern

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,12 @@
 name: Expo Publish
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - development
+      - "*KAR-"
+  pull_request:
+    branches:
+      - development
 
 jobs:
   publish:
