--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "expo-permissions": "~9.3.0",
     "expo-status-bar": "~1.0.2",
     "formik": "^2.1.7",
+    "generate": "^0.14.0",
     "i18n-js": "^3.8.0",
     "immer": "^7.0.9",
     "picker": "^0.1.4",
@@ -58,7 +59,7 @@
     "react-native-screens": "~2.10.1",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-skeleton-placeholder": "^3.0.2",
-    "react-native-svg": "12.1.0",
+    "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^2.15.2",
     "react-native-unimodules": "^0.7.0-rc.4",
     "react-native-web": "~0.13.12",
