--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-native-dotenv": "^2.5.5",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-masked-text": "^1.13.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~2.1.0",
