--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "formik": "^2.1.7",
     "i18n-js": "^3.8.0",
     "immer": "^7.0.9",
+    "moment": "^2.29.1",
     "picker": "^0.1.4",
     "ramda": "^0.27.1",
     "react": "16.13.1",
