--- a/package.json
+++ b/package.json
@@ -55,10 +55,11 @@
     "expo-random": "~11.1.2",
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
+    "flat": "^5.0.2",
     "formik": "^2.1.7",
     "i18n-js": "^3.8.0",
     "immer": "^7.0.9",
-    "moment": "^2.29.1",
+    "moment": "2.29.0",
     "picker": "^0.1.4",
     "ramda": "^0.27.1",
     "react": "16.13.1",
@@ -97,6 +98,7 @@
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@react-native-community/eslint-config": "~2.0.0",
+    "@types/flat": "^5.0.2",
     "@types/i18n-js": "^3.8.0",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.2",
