refactor(core config): modified prettier settings

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
 {
   "bracketSpacing": true,
-  "jsxBracketSameLine": true,
+  "jsxBracketSameLine": false,
   "singleQuote": false,
   "trailingComma": "es5",
   "tabWidth": 2,
   "useTabs": false,
-  "semi": true
+  "semi": true,
 }
