--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@react-navigation/native": "^5.7.4",
     "@react-navigation/stack": "^5.9.1",
     "@redux-saga/core": "^1.1.3",
-    "@types/ramda": "^0.27.32",
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-snap-carousel": "^3.8.3",
     "@types/react-redux": "^7.1.9",
@@ -61,7 +60,6 @@
     "lodash": "^4.17.21",
     "moment": "2.29.0",
     "picker": "^0.1.4",
-    "ramda": "^0.27.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "0.63.4",
@@ -100,6 +98,7 @@
     "@types/flat": "^5.0.2",
     "@types/i18n-js": "^3.8.0",
     "@types/jest": "^26.0.14",
+    "@types/lodash": "^4.14.178",
     "@types/node": "^14.11.2",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
