refactor(card): modified card height and fixed status bar issue in android

--- a/app.json
+++ b/app.json
@@ -10,6 +10,10 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "androidStatusBar": {
+      "backgroundColor": "#ffffff",
+      "translucent": false
+    },
     "facebookScheme": "fb1091360418020555",
     "facebookAppId": "1091360418020555",
     "facebookDisplayName": "karosa",
