--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "expo-font": "~9.1.0",
     "expo-google-app-auth": "^8.1.7",
     "expo-image-picker": "~10.1.4",
+    "expo-location": "~12.0.4",
     "expo-random": "~11.1.2",
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
@@ -66,6 +67,8 @@
     "react-native-dotenv": "^2.5.5",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-maps": "^0.30.1",
     "react-native-masked-text": "^1.13.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-raw-bottom-sheet": "^2.2.0",
