--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ API_URL=http://tambisqa-env.eba-hwct9u5s.ap-southeast-1.elasticbeanstalk.com
 
 # GOOGLE MAPS
 GOOGLE_PLACES_API_KEY=AIzaSyDgsrWcoqhdVaCTBumGvR-9OhhdSWp6sXg
+GOOGLE_GEOCODER_API_URL=https://maps.googleapis.com/maps/api/geocode/json
