--- a/package.json
+++ b/package.json
@@ -132,7 +132,7 @@
     }
   },
   "validate-branch-name": {
-    "pattern": "/^(master|development){1}$|^(KAR|bugfix|hotfix|release)-.+$/g",
+    "pattern": "^(master|development){1}$|^(bugfix|hotfix|release)\/|^(KAR)-.+$",
     "errorMsg": "Incorrect branch name set. Branches should follow the format (master|development) or (KAR|bugfix|hotfix|release)- \n Rename your branch using `git branch -m <<new-name>>`"
   }
 }
