chore(on-going): on-going

--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   },
   "lint-staged": {
     "./src/**/**/*.{ts,js,jsx,tsx}": [
-      "yarn format",
-      "yarn lint"
+      "yarn format"
     ]
   },
   "dependencies": {
