--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,9 +21,11 @@
     "noFallthroughCasesInSwitch": true,
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
+    "rootDir": ".",
     "paths": {
       "@app/assets/*": ["src/assets/*"],
       "@app/atoms/*": ["src/components/atoms/*"],
+      "@app/ci/*": [".ci/*"],
       "@app/constants": ["src/constants"],
       "@app/components/*": ["src/components/*"],
       "@app/config/*": ["src/config/*"],
