--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "eject": "expo eject",
     "tsc": "tsc",
     "ci": "yarn lint && yarn tsc",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "generateComponent": "plop --plopfile generators/component.js",
     "generateScreen": "plop --plopfile generators/screen.js",
     "lint": "eslint --ignore-path .gitignore \"src/**/**/*.+(ts|js|tsx)\" --max-warnings=0",
@@ -51,6 +53,8 @@
     "flat": "^5.0.2",
     "formik": "^2.1.7",
     "immer": "^7.0.9",
+    "jest": "27.4.7",
+    "jest-expo": "^45.0.1",
     "lodash": "^4.17.21",
     "moment": "2.29.0",
     "react": "16.13.1",
@@ -87,6 +91,7 @@
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@react-native-community/eslint-config": "~2.0.0",
+    "@testing-library/react-native": "^9.1.0",
     "@types/flat": "^5.0.2",
     "@types/jest": "^26.0.14",
     "@types/lodash": "^4.14.178",
@@ -117,6 +122,7 @@
     "eslint-plugin-react-native-a11y": "^2.0.3",
     "eslint-plugin-testing-library": "^3.10.1",
     "husky": "^6.0.0",
+    "jest-transform-stub": "2.0.0",
     "lint-staged": "^11.0.0",
     "metro": "^0.58.0",
     "plop": "^2.7.4",
@@ -131,8 +137,51 @@
       "path": "cz-conventional-changelog"
     }
   },
+  "jest": {
+    "displayName": "karosa-native",
+    "preset": "jest-expo",
+    "timers": "fake",
+    "testPathIgnorePatterns": [
+      "<rootDir>/node_modules",
+      "<rootDir>/dist"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.tsx",
+      "!**/coverage/**",
+      "!**/node_modules/**",
+      "!**/generators/**",
+      "!**/babel.config.js",
+      "!**/metro.config.js"
+    ],
+    "collectCoverage": true,
+    "globals": {
+      "__DEV__": true
+    },
+    "setupFilesAfterEnv": [
+      "<rootDir>/.ci/setupTests.ts"
+    ],
+    "testRegex": "/__tests__/.*\\.(ts|tsx|js)$",
+    "transform": {
+      ".+\\.(css|styl|less|sass|scss|png|jpg|ttf|woff|woff2)$": "jest-transform-stub",
+      "^.+\\.svg$": "<rootDir>/.ci/svgTransform.ts"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
+    "moduleNameMapper": {
+      "\\.svg": "<rootDir>/src/components/atoms/Icon/__mocks__/svgMock.ts"
+    }
+  },
   "validate-branch-name": {
-    "pattern": "^(master|development){1}$|^(bugfix|hotfix|release|feature)\/|^(KAR)-.+$",
+    "pattern": "^(master|development){1}$|^(bugfix|hotfix|release|feature)/|^(KAR)-.+$",
     "errorMsg": "Incorrect branch name set. Branches should follow the format (master|development) or (KAR|bugfix|hotfix|release)- \n Rename your branch using `git branch -m <<new-name>>`"
   }
 }
